location landing pages

--- a/index.html
+++ b/index.html
@@ -666,85 +666,136 @@
         <div class="row g-4 justify-content-center">
           <!-- Carbondale Office -->
           <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
-            <div class="card h-100 shadow-sm">
-              <div class="ratio ratio-4x3">
-                <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3096.8234!2d-107.2111!3d39.4022!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8741489f1d7c7f7d%3A0x123456789!2s320%20Main%20St%2C%20Carbondale%2C%20CO%2081623!5e0!3m2!1sen!2sus!4v1234567890"
-                  style="border: 0"
-                  allowfullscreen=""
-                  loading="lazy"
-                  referrerpolicy="no-referrer-when-downgrade"
-                >
-                </iframe>
+            <div class="location-card">
+              <div class="location-image-container image-zoom">
+                <div class="image-zoom-wrapper">
+                  <a href="./locations/aspen/">
+                    <img
+                      src="/assets/images/sopris.jpeg"
+                      alt="Roaring Fork Valley Office"
+                      class="location-image"
+                    />
+                  </a>
+                </div>
+                <div class="speaker-content location-hover-content">
+                  <h4>Learn More About</h4>
+                  <h4 class="hover-name">Roaring Fork Valley Office</h4>
+                </div>
               </div>
-              <div class="card-body text-center">
-                <h4 class="card-title">Roaring Fork Valley Office</h4>
-                <p class="card-text">
-                  320 Main Street, Suite 200<br />
-                  Carbondale, CO 81623
-                </p>
-                <a
-                  href="https://maps.google.com/?q=320+Main+Street+Suite+200+Carbondale+CO+81623"
-                  target="_blank"
-                  class="btn btn-outline-primary get-directions-btn"
-                  >Get Directions</a
-                >
+              <div class="card h-100 shadow-sm" style="margin-top: 20px">
+                <div class="ratio ratio-4x3">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3096.8234!2d-107.2111!3d39.4022!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8741489f1d7c7f7d%3A0x123456789!2s320%20Main%20St%2C%20Carbondale%2C%20CO%2081623!5e0!3m2!1sen!2sus!4v1234567890"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  >
+                  </iframe>
+                </div>
+                <div class="card-body text-center">
+                  <h4 class="card-title">Roaring Fork Valley Office</h4>
+                  <p class="card-text">
+                    320 Main Street, Suite 200<br />
+                    Carbondale, CO 81623
+                  </p>
+                  <a
+                    href="https://maps.google.com/?q=320+Main+Street+Suite+200+Carbondale+CO+81623"
+                    target="_blank"
+                    class="btn btn-outline-primary get-directions-btn"
+                    >Get Directions</a
+                  >
+                </div>
               </div>
             </div>
           </div>
           <!-- Telluride Office -->
           <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
-            <div class="card h-100 shadow-sm">
-              <div class="ratio ratio-4x3">
-                <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3096.8234!2d-107.8123!3d37.9375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8741489f1d7c7f7d%3A0x987654321!2s119%20W%20Colorado%20Ave%2C%20Telluride%2C%20CO%2081435!5e0!3m2!1sen!2sus!4v1234567890"
-                  style="border: 0"
-                  allowfullscreen=""
-                  loading="lazy"
-                  referrerpolicy="no-referrer-when-downgrade"
-                >
-                </iframe>
+            <div class="location-card">
+              <div class="location-image-container image-zoom">
+                <div class="image-zoom-wrapper">
+                  <a href="./locations/telluride/">
+                    <img
+                      src="/assets/images/telluride.jpeg"
+                      alt="Telluride Office"
+                      class="location-image"
+                    />
+                  </a>
+                </div>
+                <div class="speaker-content location-hover-content">
+                  <h4>Learn More About</h4>
+                  <h4 class="hover-name">Telluride Office</h4>
+                </div>
               </div>
-              <div class="card-body text-center">
-                <h4 class="card-title">Telluride Office</h4>
-                <p class="card-text">
-                  119A West Colorado Avenue<br />
-                  Telluride, CO 81435
-                </p>
-                <a
-                  href="https://maps.google.com/?q=119A+West+Colorado+Avenue+Telluride+CO+81435"
-                  target="_blank"
-                  class="btn btn-outline-primary get-directions-btn"
-                  >Get Directions</a
-                >
+              <div class="card h-100 shadow-sm" style="margin-top: 20px">
+                <div class="ratio ratio-4x3">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3096.8234!2d-107.8123!3d37.9375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8741489f1d7c7f7d%3A0x987654321!2s119%20W%20Colorado%20Ave%2C%20Telluride%2C%20CO%2081435!5e0!3m2!1sen!2sus!4v1234567890"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  >
+                  </iframe>
+                </div>
+                <div class="card-body text-center">
+                  <h4 class="card-title">Telluride Office</h4>
+                  <p class="card-text">
+                    119A West Colorado Avenue<br />
+                    Telluride, CO 81435
+                  </p>
+                  <a
+                    href="https://maps.google.com/?q=119A+West+Colorado+Avenue+Telluride+CO+81435"
+                    target="_blank"
+                    class="btn btn-outline-primary get-directions-btn"
+                    >Get Directions</a
+                  >
+                </div>
               </div>
             </div>
           </div>
           <!-- Rifle Office -->
           <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
-            <div class="card h-100 shadow-sm">
-              <div class="ratio ratio-4x3">
-                <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3096.8234!2d-107.7831!3d39.5347!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8741489f1d7c7f7d%3A0x123456780!2s111%20E%203rd%20St%2C%20Rifle%2C%20CO%2081650!5e0!3m2!1sen!2sus!4v1234567890"
-                  style="border: 0"
-                  allowfullscreen=""
-                  loading="lazy"
-                  referrerpolicy="no-referrer-when-downgrade"
-                >
-                </iframe>
+            <div class="location-card">
+              <div class="location-image-container image-zoom">
+                <div class="image-zoom-wrapper">
+                  <a href="./locations/rifle/">
+                    <img
+                      src="/assets/images/rifle.jpg"
+                      alt="Rifle Office"
+                      class="location-image"
+                    />
+                  </a>
+                </div>
+                <div class="speaker-content location-hover-content">
+                  <h4>Learn More About</h4>
+                  <h4 class="hover-name">Rifle Office</h4>
+                </div>
               </div>
-              <div class="card-body text-center">
-                <h4 class="card-title">Rifle Office</h4>
-                <p class="card-text">
-                  111 East Third Street, Unit 219<br />
-                  Rifle, CO 81650
-                </p>
-                <a
-                  href="https://maps.google.com/?q=111+East+Third+Street+Unit+219+Rifle+CO+81650"
-                  target="_blank"
-                  class="btn btn-outline-primary get-directions-btn"
-                  >Get Directions</a
-                >
+              <div class="card h-100 shadow-sm" style="margin-top: 20px">
+                <div class="ratio ratio-4x3">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3096.8234!2d-107.7831!3d39.5347!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8741489f1d7c7f7d%3A0x123456780!2s111%20E%203rd%20St%2C%20Rifle%2C%20CO%2081650!5e0!3m2!1sen!2sus!4v1234567890"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  >
+                  </iframe>
+                </div>
+                <div class="card-body text-center">
+                  <h4 class="card-title">Rifle Office</h4>
+                  <p class="card-text">
+                    111 East Third Street, Unit 219<br />
+                    Rifle, CO 81650
+                  </p>
+                  <a
+                    href="https://maps.google.com/?q=111+East+Third+Street+Unit+219+Rifle+CO+81650"
+                    target="_blank"
+                    class="btn btn-outline-primary get-directions-btn"
+                    >Get Directions</a
+                  >
+                </div>
               </div>
             </div>
           </div>
