locations and practice areas

--- a/index.html
+++ b/index.html
@@ -483,12 +483,12 @@
         <div class="row g-4 text-center box-row">
           <div class="prac" data-aos="fade-down" data-aos-delay="150">
             <div class="offerings theme-shadow p-lg-5 p-4 family">
-              <h5 class="mt-4 mb-3 prac-title">Family Law</h5>
+              <h5 class="mt-4 mb-3 prac-title"><a href="./family-law/" style="color: inherit; text-decoration: none;">Family Law</a></h5>
               <p>What We Do</p>
             </div>
             <div class="prac-sub">
               <!-- <h6 class="sub-title">We represent Family Law clients involving the following legal matters:</h6> -->
-              <h6>Divorce and Legal Separation</h6>
+              <h6><a href="./family-law/divorce/" style="color: inherit; text-decoration: none;">Divorce and Legal Separation</a></h6>
               <div class="line"></div>
               High-Asset and Complex Marital Estates<br />
               Valuation and Allocation of Real Estate and Business Interests<br />
@@ -502,7 +502,7 @@
                 <i class="bi bi-diamond pb-4" style="margin: 0"></i>
               </div>
 
-              <h6>Parenting Rights</h6>
+              <h6><a href="./family-law/child-custody/" style="color: inherit; text-decoration: none;">Parenting Rights</a></h6>
               <div class="line"></div>
               Allocation of Parental Rights<br />
               Allocation of Parental Responsibilities<br />
@@ -527,15 +527,15 @@
           </div>
           <div class="prac" data-aos="fade-down" data-aos-delay="250">
             <div class="offerings theme-shadow p-lg-5 p-4 criminal">
-              <h5 class="mt-4 mb-3">Criminal Defense</h5>
+              <h5 class="mt-4 mb-3"><a href="./criminal-defense/" style="color: inherit; text-decoration: none;">Criminal Defense</a></h5>
               <p>What We Do</p>
             </div>
             <div class="prac-sub">
               <!-- <h6 class="sub-title">We represent Family Law clients involving the following legal matters:</h6> -->
               <h6>Felony and Misdemeanor Crimes</h6>
               <div class="line"></div>
-              DUIs<br />
-              Domestic Violence<br />
+              <a href="./criminal-defense/dui/" style="color: inherit; text-decoration: none;">DUIs</a><br />
+              <a href="./criminal-defense/domestic-violence/" style="color: inherit; text-decoration: none;">Domestic Violence</a><br />
               Assault<br />
               Theft<br />
               Property Crimes<br />
