--- a/locations/rifle/index.html
+++ b/locations/rifle/index.html
@@ -154,7 +154,7 @@
               </p>
 
               <p>
-                As a locally-focused boutique law firm, we understand the unique legal challenges facing Rifle residents and the surrounding communities. From family law matters affecting working-class families to criminal defense for I-70 corridor DUI cases, our attorneys bring decades of combined experience to every case while maintaining the personal attention that larger firms cannot match.
+                As a locally-focused boutique law firm, we understand the unique legal challenges facing Rifle residents and the surrounding communities. From family law matters affecting working-class families to criminal defense for I-70 corridor DUI cases, our attorneys bring decades of combined experience to every case while providing the personalized attention that defines our practice.
               </p>
 
               <h2>Comprehensive Legal Services in Rifle</h2>
@@ -194,15 +194,15 @@
 
               <h2>Why Choose Neiley & Morris in Rifle</h2>
 
-              <h3>Local Presence vs. Outside Competitors</h3>
+              <h3>Strong Local Presence in Rifle and Garfield County</h3>
               <p>
-                We're establishing a strong local presence in Rifle and Garfield County, differentiating ourselves from larger firms and out-of-area competitors. Unlike firms that treat Western Slope clients as an afterthought, we're committed to serving the Rifle community with:
+                We're establishing a strong local presence in Rifle and Garfield County, committed to serving the community with:
               </p>
               <ul>
                 <li>A dedicated Rifle office for convenient local access</li>
                 <li>Attorneys who understand Western Slope values and communities</li>
                 <li>Personal relationships with local courts and legal professionals</li>
-                <li>Reasonable rates that reflect our commitment to serving working families</li>
+                <li>A commitment to providing quality legal representation that serves working families</li>
               </ul>
 
               <h3>Understanding Garfield County's Unique Landscape</h3>
@@ -232,7 +232,7 @@
 
               <h3>Personalized Attention</h3>
               <p>
-                As a boutique firm, we provide the personal attention that larger firms cannot match. Your attorney will know your case inside and out, and you'll have direct access to experienced counsel throughout the process. We return phone calls promptly and keep you informed about your case's progress.
+                As a boutique firm, we provide exceptional personal attention throughout your legal matter. Your attorney will know your case inside and out, and you'll have direct access to experienced counsel throughout the process. We return phone calls promptly and keep you informed about your case's progress.
               </p>
 
               <h2>Garfield County Courthouse</h2>
@@ -288,15 +288,15 @@
                 If you've been arrested for DUI in Garfield County, time is critical. You have only seven days to request a DMV hearing to protect your driving privileges. Contact Neiley & Morris immediately at <strong>(970) 963-6363</strong> to ensure your rights are protected.
               </p>
 
-              <h2>Differentiating from Shipp Law</h2>
+              <h2>The Boutique Advantage for Garfield County</h2>
               <p>
-                While Shipp Law is a known name in Western Slope criminal defense, Neiley & Morris offers important advantages:
+                As a boutique law firm with a dedicated Rifle office, we offer a unique combination of sophisticated legal expertise and personalized service:
               </p>
               <ul>
-                <li><strong>Comprehensive Services:</strong> Unlike single-practice area firms, we handle both family law and criminal defense, serving clients' diverse legal needs</li>
-                <li><strong>Personal Attention:</strong> Our boutique size ensures you work directly with experienced attorneys, not junior associates</li>
-                <li><strong>Local Commitment:</strong> We're building lasting relationships in Garfield County, not just taking cases from afar</li>
-                <li><strong>Reasonable Rates:</strong> We provide sophisticated legal services at rates that respect the financial realities of working families</li>
+                <li><strong>Comprehensive Services:</strong> We handle both family law and criminal defense, serving all your legal needs under one roof without requiring multiple firms</li>
+                <li><strong>Direct Attorney Access:</strong> Our boutique size ensures you work directly with experienced attorneys who know every detail of your case, not junior associates or case handlers</li>
+                <li><strong>Local Commitment:</strong> We're building lasting relationships in Garfield County with a dedicated Rifle office providing convenient local access to quality legal representation</li>
+                <li><strong>Focused Representation:</strong> We intentionally limit our caseload to ensure each client receives the time and attention their case deserves</li>
               </ul>
 
               <h2>Schedule a Consultation</h2>
